<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v7.widget.CardView
        android:id="@+id/edu_card1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/nav_header_vertical_spacing">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Graduation , 2015"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:padding="8dp"
                android:textSize="20dp"
                android:textColor="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/colg_name"
                android:padding="12dp"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/degree_btech"
                android:padding="12dp"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/degree_marks"
                android:padding="12dp"
                android:textSize="15dp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/colorAccent"
                android:layout_marginTop="8dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Diploma , 2012"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:padding="8dp"
                android:textSize="20dp"
                android:textColor="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/poly_name"
                android:padding="12dp"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/degree_poly"
                android:padding="12dp"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/poly_marks"
                android:padding="12dp"
                android:textSize="15dp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/colorAccent"
                android:layout_marginTop="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Matriculation , 2009"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:padding="8dp"
                android:textSize="20dp"
                android:textColor="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/school_name"
                android:padding="12dp"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/school_marks"
                android:padding="12dp"
                android:textSize="15dp"
                android:textStyle="bold" />


            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/colorAccent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

        </LinearLayout>


    </android.support.v7.widget.CardView>

</android.support.v4.widget.NestedScrollView>