<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view2"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#ffffff"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Resume Headlines"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"
                    android:padding="8dp" />

                <TextView
                    android:id="@+id/tv_my_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/my_desc"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20dp"
                    android:padding="8dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin" />

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view3"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:backgroundTint="#ffffff"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:nestedScrollingEnabled="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_my_designation_only"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="10dp"
                    android:text="@string/my_designation_only"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_my_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingLeft="10dp"
                    android:text="@string/my_company"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="15dp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view4"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp">

            <ImageView
                android:id="@+id/img_view2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/bg_main" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:nestedScrollingEnabled="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_current_work_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="15dp"
                    android:text="@string/currently_working_heading"
                    android:textAlignment="center"
                    android:textColor="#9E9E9E"
                    android:textSize="10dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_current_work"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp"
                    android:text="@string/currently_working_desc"
                    android:textAlignment="textStart"
                    android:textColor="#ffffff"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#ffffff"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:nestedScrollingEnabled="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_job_role_applying"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="10dp"
                    android:text="@string/job_role_head"
                    android:textAlignment="center"
                    android:textColor="#424242"
                    android:textSize="15dp"
                    android:textStyle="italic" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <ImageView
                        android:id="@+id/img_job_role"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:src="@drawable/android_logo" />

                    <TextView
                        android:id="@+id/tv_job_role"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_toRightOf="@id/img_job_role"
                        android:paddingLeft="10dp"
                        android:text="@string/android_developer"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_experience"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_job_role"
                        android:layout_gravity="left"
                        android:layout_marginBottom="5dp"
                        android:layout_toRightOf="@id/img_job_role"
                        android:paddingLeft="10dp"
                        android:text="@string/experience"
                        android:textAlignment="center"
                        android:textColor="#424242"
                        android:textSize="15dp"
                        android:textStyle="italic" />
                </RelativeLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#ffffff"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:id="@+id/linear_education1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:nestedScrollingEnabled="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_edu_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/edu_title"
                    android:textAlignment="center"
                    android:textColor="#424242"
                    android:textSize="20dp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/tv_colg_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/colg_name"
                    android:textColor="#000000"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_degree_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="10dp"
                    android:text="@string/degree_btech"
                    android:textAlignment="center"
                    android:textColor="#424242"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tv_degree_marks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="10dp"
                    android:text="@string/degree_marks"
                    android:textAlignment="center"
                    android:textColor="#424242"
                    android:textSize="16dp"
                    android:textStyle="italic" />

                <LinearLayout
                    android:id="@+id/linear_education2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="true"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_poly_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:paddingLeft="10dp"
                        android:text="@string/poly_name"
                        android:textColor="#000000"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_polydegree_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingLeft="10dp"
                        android:text="@string/degree_poly"
                        android:textAlignment="center"
                        android:textColor="#424242"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/tv_poly_marks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingLeft="10dp"
                        android:text="@string/poly_marks"
                        android:textAlignment="center"
                        android:textColor="#424242"
                        android:textSize="16dp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/tv_school_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:paddingLeft="10dp"
                        android:text="@string/school_name"
                        android:textColor="#000000"
                        android:textSize="20dp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/tv_school_marks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingLeft="10dp"
                        android:text="@string/school_marks"
                        android:textAlignment="center"
                        android:textColor="#424242"
                        android:textSize="16dp"
                        android:textStyle="italic" />

                </LinearLayout>


                <ImageButton
                    android:id="@+id/imgbtn_expand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/expand_btn" />

                <ImageButton
                    android:id="@+id/imgbtn_collapse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:srcCompat="@drawable/collapse_btn" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <HorizontalScrollView
            android:id="@+id/hz_scroll_skills"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <LinearLayout
                android:id="@+id/hz_scroll_linear_layout_skills"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

        </HorizontalScrollView>

        <RelativeLayout xmlns:attrs="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            android:background="@drawable/bg_viewpager">

            <android.support.v4.view.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.rd.PageIndicatorView
                android:id="@+id/pageIndicatorView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                attrs:piv_animationType="worm"
                attrs:piv_interactiveAnimation="true"
                attrs:piv_radius="4dp"
                attrs:piv_selectedColor="@color/colorPrimary"
                attrs:piv_unselectedColor="#d7d7d7"
                attrs:piv_viewPager="@id/viewpager" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="8dp"
            android:nestedScrollingEnabled="false"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF5722"
                android:text="@string/my_location_in_map"
                android:textColor="@color/cardview_light_background"
                android:textSize="15dp"
                android:textStyle="italic" />

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.example.admin.myresume.DrawerActivity" />

        </LinearLayout>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>